Closed
Bug 1735259
Opened 3 years ago
Closed 3 years ago
[clang-13] error: undefined symbol: public: void __cdecl mozilla::a11y::HyperTextAccessible::ReplaceText
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
95 Branch
Tracking | Status | |
---|---|---|
firefox95 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
[task 2021-10-11T23:58:55.660Z] 23:58:55 INFO - lld-link: error: undefined symbol: public: void __cdecl mozilla::a11y::HyperTextAccessible::ReplaceText(class nsTSubstring<char16_t> const &)
[task 2021-10-11T23:58:55.661Z] 23:58:55 INFO - >>> referenced by /builds/worker/checkouts/gecko/accessible/windows/msaa/MsaaAccessible.cpp:1724
[task 2021-10-11T23:58:55.661Z] 23:58:55 INFO - >>> ../../../accessible/windows/msaa/Unified_cpp_windows_msaa0.obj:(public: virtual long __cdecl mozilla::a11y::MsaaAccessible::put_accValue(struct tagVARIANT, wchar_t *))
[task 2021-10-11T23:58:55.661Z] 23:58:55 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:544: xul.dll] Error 1
Assignee | ||
Comment 1•3 years ago
|
||
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/a306ddaecb47
Add missing include in MsaaAccessible.cpp. r=Jamie
Comment 3•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox95:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•