Bug 1735259 - Add missing include in MsaaAccessible.cpp. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D128158